--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,29 @@ ALLOWED_TOKENS=
 # 网络访问控制
 # 已禁用IP限制，完全通过Token认证控制访问
 
+# 网络超时配置（秒）
+# 连接超时 - 建立连接的时间
+PROXY_CONNECT_TIMEOUT=30
+# 发送超时 - 向upstream发送请求的时间
+PROXY_SEND_TIMEOUT=300
+# 读取超时 - 从upstream读取响应的时间（浏览器操作可能很长）
+PROXY_READ_TIMEOUT=600
+# WebSocket超时 - WebSocket连接的空闲超时
+WEBSOCKET_TIMEOUT=1800
+
+# Nginx工作进程配置
+WORKER_CONNECTIONS=1024
+WORKER_PROCESSES=auto
+
+# 速率限制配置
+RATE_LIMIT_ZONE_SIZE=10m
+RATE_LIMIT_RATE=20r/s
+RATE_LIMIT_BURST=50
+
+# 健康检查配置
+HEALTH_CHECK_INTERVAL=30
+HEALTH_CHECK_RETRIES=3
+HEALTH_CHECK_TIMEOUT=10
+
 # 日志级别
 LOG_LEVEL=info
